migrate preference test to new JfxPlaceTest annotation